syntax = "proto3";

package proto;

option go_package = "gophkeeper/proto";

message GetAllPairsRequest {
  string token = 1;
}

message PairMsg {
  int64 id = 1;
  string login = 2;
  string password = 3;
  string metadata = 4;
}

message GetAllPairsResponse {
  repeated PairMsg pairs = 1;
  string error = 2;
}

service Pair {
  rpc GetAll(GetAllPairsRequest) returns (GetAllPairsResponse);
}